[package]
name = "join-ordered-streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
educe = "0.4.19"
futures = "0.3.24"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
rand = "0.8.5"
